mirror/mirror-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mirror
  namespace: mirror
spec:
  type: LoadBalancer
  loadBalancerClass: metallb
  loadBalancerIP: 192.168.1.49
  externalTrafficPolicy: Local
  selector:
    app: mirror-ceph
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  - name: rsync
    port: 873
  - name: ftp
    port: 21
  - name: ftpdata000
    port: 40000
  - name: ftpdata001
    port: 40001
  - name: ftpdata002
    port: 40002
  - name: ftpdata003
    port: 40003
  - name: ftpdata004
    port: 40004
  - name: ftpdata005
    port: 40005
  - name: ftpdata006
    port: 40006
  - name: ftpdata007
    port: 40007
  - name: ftpdata008
    port: 40008
  - name: ftpdata009
    port: 40009
  - name: ftpdata010
    port: 40010
  - name: ftpdata011
    port: 40011
  - name: ftpdata012
    port: 40012
  - name: ftpdata013
    port: 40013
  - name: ftpdata014
    port: 40014
  - name: ftpdata015
    port: 40015
  - name: ftpdata016
    port: 40016
  - name: ftpdata017
    port: 40017
  - name: ftpdata018
    port: 40018
  - name: ftpdata019
    port: 40019
  - name: ftpdata020
    port: 40020
  - name: ftpdata021
    port: 40021
  - name: ftpdata022
    port: 40022
  - name: ftpdata023
    port: 40023
  - name: ftpdata024
    port: 40024
  - name: ftpdata025
    port: 40025
  - name: ftpdata026
    port: 40026
  - name: ftpdata027
    port: 40027
  - name: ftpdata028
    port: 40028
  - name: ftpdata029
    port: 40029
  - name: ftpdata030
    port: 40030
  - name: ftpdata031
    port: 40031
  - name: ftpdata032
    port: 40032
  - name: ftpdata033
    port: 40033
  - name: ftpdata034
    port: 40034
  - name: ftpdata035
    port: 40035
  - name: ftpdata036
    port: 40036
  - name: ftpdata037
    port: 40037
  - name: ftpdata038
    port: 40038
  - name: ftpdata039
    port: 40039
  - name: ftpdata040
    port: 40040
  - name: ftpdata041
    port: 40041
  - name: ftpdata042
    port: 40042
  - name: ftpdata043
    port: 40043
  - name: ftpdata044
    port: 40044
  - name: ftpdata045
    port: 40045
  - name: ftpdata046
    port: 40046
  - name: ftpdata047
    port: 40047
  - name: ftpdata048
    port: 40048
  - name: ftpdata049
    port: 40049
  - name: ftpdata050
    port: 40050
