mirror/mirror-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirror
  namespace: mirror
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Mirror
    flame.pawelmalak/url: https://mirror.mdapi.ch
    flame.pawelmalak/category: Network
    flame.pawelmalak/icon: mirror
    flame.pawelmalak/order: '40'
spec:
  ingressClassName: nginx
  rules:
    - host: mirror.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: mirror
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - mirror.mdapi.ch
      secretName: mirror-cert
